--- a/Marlin/MainWindow.xaml
+++ b/Marlin/MainWindow.xaml
@@ -6,7 +6,80 @@
         xmlns:local="clr-namespace:Marlin"
         mc:Ignorable="d"
         Title="Marlin" Height="450" Width="800">
+    <Window.Resources>
+        
+    </Window.Resources>
     <Grid>
-
+        <Grid.RowDefinitions>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+        <Grid 
+            Grid.Row="0">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition 
+                    Width="*"/>
+                <ColumnDefinition 
+                    Width="auto"/>
+            </Grid.ColumnDefinitions>
+            <Menu 
+                Grid.Column="0"
+                FontSize="15"
+                Background="White"
+                VerticalAlignment="Center">
+                <MenuItem 
+                    Header="Marlin">
+                    <MenuItem 
+                        Header="Настройки" 
+                        Click="MenuItem_Click"/>
+                    <MenuItem 
+                        Header="Скрипты" 
+                        Click="MenuItem_Click"/>
+                    <MenuItem 
+                        Header="Действия" 
+                        Click="MenuItem_Click"/>
+                </MenuItem>
+            </Menu>
+            <CheckBox
+                Margin="15,0"
+                Grid.Column="1"
+                Content="Озвучивать"
+                IsChecked="True"/>
+        </Grid>
+        <Grid 
+            Grid.Row="1">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition 
+                    Width="*"/>
+                <ColumnDefinition 
+                    Width="3*"/>
+                <ColumnDefinition 
+                    Width="*"/>
+            </Grid.ColumnDefinitions>
+            <Grid 
+                Grid.Column="1"
+                Margin="10"
+                VerticalAlignment="Center">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition 
+                        Width="*"/>
+                    <ColumnDefinition 
+                        Width="auto"/>
+                </Grid.ColumnDefinitions>
+                <TextBox
+                    FontSize="20"
+                    Padding="15,0"
+                    HorizontalContentAlignment="Center"
+                    VerticalContentAlignment="Center"
+                    KeyDown="TextBox_KeyDown"
+                    Grid.Column="0"/>
+                <Button
+                    FontSize="15"
+                    Margin="5"
+                    Foreground="White"
+                    Grid.Column="1"
+                    Content="Выполнить"/>
+            </Grid>
+        </Grid>
     </Grid>
 </Window>
