--- a/Marlin/MainWindow.xaml
+++ b/Marlin/MainWindow.xaml
@@ -7,6 +7,7 @@
         xmlns:local="clr-namespace:Marlin"
         mc:Ignorable="d"
         Title="Marlin" 
+        WindowStartupLocation="CenterScreen"
         Height="450" 
         Width="800">
     <Window.DataContext>
