Вынесено отображение с окна на отдельные страницы

--- a/Marlin/Windows/MessageWindow.xaml
+++ b/Marlin/Windows/MessageWindow.xaml
@@ -13,7 +13,7 @@
         ResizeMode="NoResize"
         Foreground="{Binding Path=FontColor}">
     <Window.DataContext>
-        <vm:MessageViewModel/>
+        <vm:MessagePageViewModel/>
     </Window.DataContext>
     <Grid Background="{Binding Path=BackgroundColor}">
 
