--- a/Marlin/Views/MainPage.xaml
+++ b/Marlin/Views/MainPage.xaml
@@ -1,18 +1,19 @@
-﻿<Window x:Class="Marlin.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:vm="clr-namespace:Marlin.ViewModels"
-        xmlns:local="clr-namespace:Marlin"
-        mc:Ignorable="d"
-        Title="Marlin" 
-        WindowStartupLocation="CenterScreen"
-        Height="450" 
-        Width="800">
-    <Window.DataContext>
-        <vm:MainWindowViewModel/>
-    </Window.DataContext>
+﻿<Page x:Class="Marlin.Views.MainPage"
+      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+      xmlns:vm="clr-namespace:Marlin.ViewModels"
+      xmlns:local="clr-namespace:Marlin.Views"
+      mc:Ignorable="d" 
+      d:DesignHeight="450" 
+      d:DesignWidth="800"
+      ShowsNavigationUI="False"
+      Title="Marlin"
+      Foreground="{Binding Path=FontColor}">
+    <Page.DataContext>
+        <vm:MainPageViewModel/>
+    </Page.DataContext>
     <Grid 
         Background="{Binding Path=BackgroundColor}">
         <Grid.RowDefinitions>
@@ -27,7 +28,7 @@
             Grid.Row="0">
             <Menu 
                 FontWeight="Bold"
-                Foreground="{Binding Path=FontColor}" 
+                Foreground="{Binding Path=FontColor}"
                 VerticalAlignment="Center">
                 <MenuItem 
                     Header="Marlin"
@@ -77,7 +78,6 @@
                         <TextBlock
                             HorizontalAlignment="Center"
                             VerticalAlignment="Center"
-                            Foreground="{Binding Path=FontColor}"
                             Text="{Binding Path=Command}"/>
                     </Grid>
                 </Border>
@@ -100,7 +100,6 @@
                             FontSize="20"
                             Padding="15,0"
                             Margin="5"
-                            Foreground="{Binding Path=FontColor}"
                             Text="{Binding Path=Command,UpdateSourceTrigger=PropertyChanged}"
                             HorizontalContentAlignment="Center"
                             VerticalContentAlignment="Center"
@@ -124,4 +123,4 @@
             </Grid>
         </Grid>
     </Grid>
-</Window>
+</Page>
