--- a/Marlin/Windows/MessageWindow.xaml
+++ b/Marlin/Windows/MessageWindow.xaml
@@ -3,46 +3,12 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:vm="clr-namespace:Marlin.ViewModels"
+        xmlns:vm="clr-namespace:Marlin.ViewModels.Message"
         xmlns:local="clr-namespace:Marlin.Windows"
         mc:Ignorable="d" 
-        Height="200" 
-        Width="300"
-        WindowStartupLocation="CenterScreen"
-        WindowStyle="None"
-        ResizeMode="NoResize"
+        
         Foreground="{Binding Path=FontColor}">
     <Window.DataContext>
         <vm:MessagePageViewModel/>
     </Window.DataContext>
-    <Grid Background="{Binding Path=BackgroundColor}">
-
-        <Grid.RowDefinitions>
-            <RowDefinition Height="auto"/>
-            <RowDefinition Height="*"/>
-        </Grid.RowDefinitions>
-        
-        <Border Grid.Row="1"
-                Margin="10"
-                CornerRadius="20"
-                BorderThickness="2"
-                BorderBrush="{Binding Path=PageColor}">
-            <Grid>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="auto"/>
-                    <RowDefinition Height="*"/>
-                </Grid.RowDefinitions>
-                
-                <TextBlock Grid.Row="0" 
-                           HorizontalAlignment="Center"
-                           VerticalAlignment="Center"
-                           Text="{Binding Path=Title}"/>
-                
-                <TextBlock Grid.Row="1" 
-                           HorizontalAlignment="Center"
-                           VerticalAlignment="Center"
-                           Text="{Binding Path=Message}"/>
-            </Grid>
-        </Border>
-    </Grid>
 </Window>
