--- a/Marlin/Views/Message/MessagePage.xaml
+++ b/Marlin/Views/Message/MessagePage.xaml
@@ -4,8 +4,8 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:vm="clr-namespace:Marlin.ViewModels.Message"
       xmlns:local="clr-namespace:Marlin.Windows"
-      Width="auto"
-      Height="auto"
+      Width="300"
+      Height="200"
       Foreground="{Binding Path=FontColor}">
     <Page.DataContext>
         <vm:MessagePageViewModel/>
@@ -18,57 +18,100 @@
                 BorderBrush="{Binding Path=PageColor}">
             <Grid>
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="40px"/>
                     <RowDefinition Height="*"/>
-                    <RowDefinition Height="40px"/>
+                    <RowDefinition Height="auto"/>
                 </Grid.RowDefinitions>
 
-                <TextBlock Grid.Row="0" 
-                           FontSize="20"
-                           HorizontalAlignment="Center"
-                           VerticalAlignment="Center"
-                           Text="{Binding Path=Title}"/>
-
-                <TextBlock Grid.Row="1" 
-                       FontSize="15"
-                       TextWrapping="Wrap"
-                       HorizontalAlignment="Center"
-                       VerticalAlignment="Center"
-                       Text="{Binding Path=Message}"/>
-
-                <Button  Grid.Row="2"
-                         HorizontalAlignment="Center"
-                         VerticalAlignment="Center"
-                         Width="auto"
-                         Visibility="{Binding Path=IsOk}"
-                         Height="auto"
-                         Click="Button_Click"
-                         Content="OK"/>
-
-                <Grid Grid.Row="2"
-                      Visibility="{Binding Path=IsYesNoQuestion}">
+                <Grid Grid.Row="0">
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="70"/>
                         <ColumnDefinition Width="*"/>
                     </Grid.ColumnDefinitions>
 
-                    <Button  Grid.Column="0"
-                         HorizontalAlignment="Center"
-                         VerticalAlignment="Center"
-                         Width="auto"
-                             Margin="4,4,2,4"
-                         Height="auto"
-                         Click="Button_Click"
-                         Content="Yes"/>
+                    <TextBlock Grid.Column="0"
+                           HorizontalAlignment="Center"
+                           VerticalAlignment="Center"
+                           FontSize="70"
+                           Foreground="{Binding Path=FontColor}"
+                           FontWeight="Bold"
+                           Text="{Binding Path=Symbol}"/>
 
-                    <Button  Grid.Column="1"
-                         HorizontalAlignment="Center"
-                         VerticalAlignment="Center"
-                         Width="auto"
-                         Height="auto"
-                             Margin="2,4,4,4"
-                         Click="Button_Click"
-                         Content="No"/>
+                    <TextBlock Grid.Column="1" 
+                               FontSize="15"
+                               Margin="0,10,10,0"
+                               TextWrapping="Wrap"
+                               HorizontalAlignment="Center"
+                               VerticalAlignment="Center"
+                               Text="{Binding Path=Message}"/>
+                </Grid>
+                <Grid Grid.Row="1">
+
+                    <Button  HorizontalAlignment="Center"
+                             VerticalAlignment="Center"
+                             Width="auto"
+                             Background="{Binding Path=BackgroundColor}"
+                             Visibility="{Binding Path=IsOk}"
+                             Height="auto"
+                             Click="Button_Click"
+                             Content="OK"/>
+
+                    <Grid Visibility="{Binding Path=IsYesNoQuestion}">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="*"/>
+                        </Grid.ColumnDefinitions>
+
+                        <Button  Grid.Column="0"
+                                 Background="{Binding Path=BackgroundColor}"
+                                 Foreground="{Binding Path=FontColor}"
+                                 HorizontalAlignment="Center"
+                                 VerticalAlignment="Center"
+                                 Width="auto"
+                                 Margin="4,4,2,4"
+                                 Height="auto"
+                                 Click="Button_Click"
+                                 Content="Yes"/>
+
+                        <Button  Grid.Column="1"
+                                 Background="{Binding Path=BackgroundColor}"
+                                 Foreground="{Binding Path=FontColor}"
+                                 HorizontalAlignment="Center"
+                                 VerticalAlignment="Center"
+                                 Width="auto"
+                                 Height="auto"
+                                 Margin="2,4,4,4"
+                                 Click="Button_Click"
+                                 Content="No"/>
+                    </Grid>
+
+                    <Grid Visibility="{Binding Path=IsTextQuestion}">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="auto"/>
+                        </Grid.ColumnDefinitions>
+
+                        <TextBox Grid.Column="0"
+                                 Background="{Binding Path=BackgroundColor}"
+                                 Foreground="{Binding Path=FontColor}"
+                                 HorizontalAlignment="Center"
+                                 HorizontalContentAlignment="Center"
+                                 VerticalAlignment="Center"
+                                 Width="200"
+                                 Margin="10,10,2,10"
+                                 Height="auto"/>
+
+                        <Button  Grid.Column="1"
+                                 Background="{Binding Path=BackgroundColor}"
+                                 Foreground="{Binding Path=FontColor}"
+                                 HorizontalAlignment="Center"
+                                 VerticalAlignment="Center"
+                                 Width="auto"
+                                 Height="auto"
+                                 Margin="2,10,10,10"
+                                 Click="Button_Click"
+                                 Content="➤"/>
+                    </Grid>
+
                 </Grid>
             </Grid>
         </Border>
