--- a/Marlin/Views/Main/MainPage.xaml
+++ b/Marlin/Views/Main/MainPage.xaml
@@ -113,7 +113,7 @@
                             <Button
                                 FontSize="15"
                                 FontWeight="Bold"
-                                Foreground="{Binding Path=ButtonfontColor,UpdateSourceTrigger=PropertyChanged}"
+                                Foreground="{Binding Path=BackgroundColor,UpdateSourceTrigger=PropertyChanged}"
                                 BorderBrush="Transparent"
                                 Background="Transparent"
                                 Content="➤"/>
