--- a/Marlin/Views/Main/SettingsPage.xaml
+++ b/Marlin/Views/Main/SettingsPage.xaml
@@ -39,16 +39,194 @@
 
                     <Border Grid.Row="0"
                             Margin="10,0,10,5"
-                            CornerRadius="20"
+                            CornerRadius="25"
                             BorderBrush="{Binding Path=PageColor}"
                             BorderThickness="2">
                         <Grid Margin="15,10">
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="*"/>
+                                <RowDefinition Height="*"/>
                             </Grid.RowDefinitions>
+                            
                             <TextBlock Grid.Row="0"
-                                       FontSize="15"
+                                       FontSize="20"
                                        Text="Программа"/>
+                            
+                            <Grid Grid.Row="1">
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="*"/>
+                                    <RowDefinition Height="*"/>
+                                </Grid.RowDefinitions>
+
+                                <Grid Grid.Row="0"
+                                      Margin="0,10">
+                                    <Grid>
+                                        <Grid.ColumnDefinitions>
+                                            <ColumnDefinition Width="auto"/>
+                                            <ColumnDefinition Width="*"/>
+                                        </Grid.ColumnDefinitions>
+
+                                        <TextBlock Grid.Column="0"
+                                                   Margin="10,18"
+                                                   FontSize="15"
+                                                   Text="Оформление:"/>
+
+                                        <Grid Grid.Column="1">
+                                            <Grid.RowDefinitions>
+                                                <RowDefinition Height="*"/>
+                                                <RowDefinition Height="*"/>
+                                                <RowDefinition Height="*"/>
+                                            </Grid.RowDefinitions>
+
+                                            <Grid Grid.Row="0"
+                                                  Margin="0,10">
+                                                <Grid.ColumnDefinitions>
+                                                    <ColumnDefinition Width="auto"/>
+                                                    <ColumnDefinition Width="100"/>
+                                                </Grid.ColumnDefinitions>
+
+                                                <TextBlock Grid.Column="0"
+                                                           FontSize="15"
+                                                           Margin="0,0,15,0"
+                                                           VerticalAlignment="Bottom"
+                                                           HorizontalAlignment="Center"
+                                                           Text="Цвет фона:"/>
+
+                                                <TextBox Grid.Column="1"
+                                                         MaxLength="9"
+                                                         FontSize="15"
+                                                         Text="{Binding Path=BackgroundColor}"
+                                                         HorizontalContentAlignment="Center"/>
+                                            </Grid>
+
+                                            <Grid Grid.Row="1"
+                                                  Margin="0,10">
+                                                <Grid.ColumnDefinitions>
+                                                    <ColumnDefinition Width="auto"/>
+                                                    <ColumnDefinition Width="100"/>
+                                                </Grid.ColumnDefinitions>
+
+                                                <TextBlock Grid.Column="0"
+                                                           FontSize="15"
+                                                           Margin="0,0,15,0"
+                                                           VerticalAlignment="Bottom"
+                                                           HorizontalAlignment="Center"
+                                                           Text="Цвет текста:"/>
+
+                                                <TextBox Grid.Column="1"
+                                                         MaxLength="9"
+                                                         FontSize="15"
+                                                         Text="{Binding Path=FontColor}"
+                                                         HorizontalContentAlignment="Center"/>
+                                            </Grid>
+
+                                            <Grid Grid.Row="2"
+                                                  Margin="0,10">
+                                                <Grid.ColumnDefinitions>
+                                                    <ColumnDefinition Width="auto"/>
+                                                    <ColumnDefinition Width="100"/>
+                                                </Grid.ColumnDefinitions>
+
+                                                <TextBlock Grid.Column="0"
+                                                           FontSize="15"
+                                                           Margin="0,0,15,0"
+                                                           VerticalAlignment="Bottom"
+                                                           HorizontalAlignment="Center"
+                                                           Text="Цвет объектов:"/>
+
+                                                <TextBox Grid.Column="1"
+                                                         MaxLength="9"
+                                                         FontSize="15"
+                                                         Text="{Binding Path=PageColor}"
+                                                         HorizontalContentAlignment="Center"/>
+                                            </Grid>
+                                        </Grid>
+                                    </Grid>
+                                </Grid>
+
+                                <Grid Grid.Row="1"
+                                      Margin="0,10">
+                                    <Grid>
+                                        <Grid.ColumnDefinitions>
+                                            <ColumnDefinition Width="auto"/>
+                                            <ColumnDefinition Width="auto"/>
+                                        </Grid.ColumnDefinitions>
+
+                                        <TextBlock Grid.Column="0"
+                                                   Margin="10,18"
+                                                   FontSize="15"
+                                                   Text="Озвучивание:"/>
+
+                                        <Grid Grid.Column="1">
+                                            <Grid.RowDefinitions>
+                                                <RowDefinition Height="*"/>
+                                                <RowDefinition Height="*"/>
+                                                <RowDefinition Height="*"/>
+                                            </Grid.RowDefinitions>
+
+                                            <Grid Grid.Row="0"
+                                                  Margin="0,10,0,0">
+                                                <Grid.ColumnDefinitions>
+                                                    <ColumnDefinition Width="auto"/>
+                                                    <ColumnDefinition Width="auto"/>
+                                                </Grid.ColumnDefinitions>
+
+                                                <TextBlock Grid.Column="0"
+                                                           FontSize="15"
+                                                           Margin="0,0,15,0"
+                                                           VerticalAlignment="Bottom"
+                                                           HorizontalAlignment="Center"
+                                                           Text="Голос:"/>
+
+                                                <ComboBox Grid.Column="1"
+                                                          FontSize="15"
+                                                          ItemsSource="{Binding Path=BackgroundColor}"
+                                                          HorizontalContentAlignment="Center"/>
+                                            </Grid>
+
+                                            <Grid Grid.Row="1"
+                                                  Margin="0,10">
+                                                <Grid.ColumnDefinitions>
+                                                    <ColumnDefinition Width="auto"/>
+                                                    <ColumnDefinition Width="auto"/>
+                                                </Grid.ColumnDefinitions>
+
+                                                <TextBlock Grid.Column="0"
+                                                           FontSize="15"
+                                                           Margin="0,0,15,0"
+                                                           VerticalAlignment="Bottom"
+                                                           HorizontalAlignment="Center"
+                                                           Text="Скорось озвучивания"/>
+
+                                                <ComboBox Grid.Column="1"
+                                                          FontSize="15"
+                                                          ItemsSource="{Binding Path=BackgroundColor}"
+                                                          HorizontalContentAlignment="Center"/>
+                                            </Grid>
+
+                                            <Grid Grid.Row="2"
+                                                  Margin="0,10">
+                                                <Grid.ColumnDefinitions>
+                                                    <ColumnDefinition Width="auto"/>
+                                                    <ColumnDefinition Width="100"/>
+                                                </Grid.ColumnDefinitions>
+
+                                                <TextBlock Grid.Column="0"
+                                                           FontSize="15"
+                                                           Margin="0,0,15,0"
+                                                           VerticalAlignment="Bottom"
+                                                           HorizontalAlignment="Center"
+                                                           Text="Озвучивать:"/>
+
+                                                <CheckBox Grid.Column="1"
+                                                          FontSize="15"
+                                                          IsChecked="{Binding Path=IsSay}"
+                                                          HorizontalContentAlignment="Center"/>
+                                            </Grid>
+                                        </Grid>
+                                    </Grid>
+                                </Grid>
+                            </Grid>
                         </Grid>
                     </Border>
                     
@@ -78,16 +256,21 @@
             
             <Button Grid.Column="0"
                     Content="Назад"
-                    Margin="4,4,2,4"
+                    Margin="10,10,5,10"
+                    BorderThickness="0"
+                    BorderBrush="Transparent"
+                    Foreground="{Binding Path=FontColor}"
                     Background="{Binding Path=PageColor}"
-                    Foreground="{Binding Path=BackgroundColor}"
                     Click="Button_Click_1"/>
 
             <Button Grid.Column="1"
                     Content="Сохранить"
-                    Margin="2,4,4,4"
+                    Margin="5,10,10,10"
+                    
+                    BorderThickness="0"
+                    BorderBrush="Transparent"
+                    Foreground="{Binding Path=FontColor}"
                     Background="{Binding Path=PageColor}"
-                    Foreground="{Binding Path=BackgroundColor}"
                     Click="Button_Click"/>
         </Grid>
     </Grid>
