--- a/Marlin/Views/Main/SettingsPage.xaml
+++ b/Marlin/Views/Main/SettingsPage.xaml
@@ -25,6 +25,7 @@
                         HorizontalAlignment="Center"
                         VerticalAlignment="Center"
                         FontSize="25"
+                        FontWeight="Bold"
                         Padding="30,0"
                         Text="Настройки"/>
         </Grid>
@@ -50,6 +51,8 @@
 
                             <TextBlock Grid.Row="0"
                                        FontSize="20"
+                                       FontWeight="Bold"
+                                       Foreground="{Binding Path=PageColor}"
                                        Text="Программа"/>
 
                             <Grid Grid.Row="1">
@@ -69,6 +72,8 @@
                                         <TextBlock Grid.Column="0"
                                                    Margin="10,18"
                                                    FontSize="15"
+                                                   FontWeight="Bold"
+                                                   Foreground="{Binding Path=PageColor}"
                                                    Text="Оформление:"/>
 
                                         <Grid Grid.Column="1">
@@ -155,6 +160,8 @@
                                         <TextBlock Grid.Column="0"
                                                    Margin="10,18"
                                                    FontSize="15"
+                                                   Foreground="{Binding Path=PageColor}"
+                                                   FontWeight="Bold"
                                                    Text="Озвучивание:"/>
 
                                         <Grid Grid.Column="1">
@@ -222,6 +229,8 @@
                             </Grid.RowDefinitions>
                             <TextBlock Grid.Row="0"
                                        FontSize="20"
+                                       FontWeight="Bold"
+                                       Foreground="{Binding Path=PageColor}"
                                        Text="Администрирование"/>
 
                             <Grid Grid.Row="1">
@@ -241,6 +250,8 @@
                                         <TextBlock Grid.Column="0"
                                                    Margin="10,18"
                                                    FontSize="15"
+                                                   FontWeight="Bold"
+                                                   Foreground="{Binding Path=PageColor}"
                                                    Text="Администратор:"/>
 
                                         <Grid Grid.Column="1">
@@ -254,7 +265,7 @@
                                                   Margin="0,10">
                                                 <Grid.ColumnDefinitions>
                                                     <ColumnDefinition Width="auto"/>
-                                                    <ColumnDefinition Width="100"/>
+                                                    <ColumnDefinition Width="auto"/>
                                                 </Grid.ColumnDefinitions>
 
                                                 <TextBlock Grid.Column="0"
@@ -265,9 +276,9 @@
                                                            Text="Имя / Логин:"/>
 
                                                 <TextBox Grid.Column="1"
-                                                         MaxLength="9"
                                                          FontSize="15"
-                                                         Text="{Binding Path=BackgroundColor}"
+                                                         MinWidth="100"
+                                                         Text="{Binding Path=NewLogin,UpdateSourceTrigger=PropertyChanged}"
                                                          HorizontalContentAlignment="Center"/>
                                             </Grid>
 
@@ -275,7 +286,7 @@
                                                   Margin="0,10">
                                                 <Grid.ColumnDefinitions>
                                                     <ColumnDefinition Width="auto"/>
-                                                    <ColumnDefinition Width="100"/>
+                                                    <ColumnDefinition Width="auto"/>
                                                 </Grid.ColumnDefinitions>
 
                                                 <TextBlock Grid.Column="0"
@@ -283,12 +294,12 @@
                                                            Margin="0,0,15,0"
                                                            VerticalAlignment="Bottom"
                                                            HorizontalAlignment="Center"
-                                                           Text="Пароль:"/>
+                                                           Text="Новый пароль:"/>
 
                                                 <TextBox Grid.Column="1"
-                                                         MaxLength="9"
                                                          FontSize="15"
-                                                         Text="{Binding Path=FontColor}"
+                                                         MinWidth="100"
+                                                         Text="{Binding Path=NewPassword,UpdateSourceTrigger=PropertyChanged}"
                                                          HorizontalContentAlignment="Center"/>
                                             </Grid>
 
@@ -308,7 +319,8 @@
 
                                                 <ComboBox Grid.Column="1"
                                                           FontSize="15"
-                                                          Text="{Binding Path=PageColor}"
+                                                          SelectedValue="{Binding Path=NewGender,UpdateSourceTrigger=PropertyChanged}"
+                                                          ItemsSource="{Binding Path=Genders}"
                                                           HorizontalContentAlignment="Center"/>
                                             </Grid>
                                         </Grid>
@@ -326,6 +338,8 @@
                                         <TextBlock Grid.Column="0"
                                                    Margin="10,18"
                                                    FontSize="15"
+                                                   FontWeight="Bold"
+                                                   Foreground="{Binding Path=PageColor}"
                                                    Text="Данные:"/>
 
                                         <Grid Grid.Column="1">
@@ -337,7 +351,7 @@
                                                   Margin="0,0">
                                                 <Grid.ColumnDefinitions>
                                                     <ColumnDefinition Width="auto"/>
-                                                    <ColumnDefinition Width="300"/>
+                                                    <ColumnDefinition Width="auto"/>
                                                 </Grid.ColumnDefinitions>
 
                                                 <TextBlock Grid.Column="0"
@@ -345,11 +359,12 @@
                                                            Margin="0,0,15,0"
                                                            VerticalAlignment="Center"
                                                            HorizontalAlignment="Center"
-                                                           Text="Путь для хранения данных:"/>
+                                                           Text="Папка для хранения данных:"/>
 
                                                 <TextBox Grid.Column="1"
                                                          FontSize="15"
-                                                         Text="{Binding Path}"
+                                                         MinWidth="100"
+                                                         Text="{Binding Path=NewMainFolder}"
                                                          VerticalAlignment="Center"
                                                          HorizontalContentAlignment="Center"/>
                                             </Grid>
@@ -372,6 +387,8 @@
             <Button Grid.Column="0"
                     Content="Назад"
                     Margin="10,10,5,10"
+                    FontSize="15"
+                    FontWeight="Bold"
                     BorderThickness="0"
                     BorderBrush="Transparent"
                     Foreground="{Binding Path=BackgroundColor}"
@@ -380,6 +397,8 @@
 
             <Button Grid.Column="1"
                     Content="Сохранить"
+                    FontSize="15"
+                    FontWeight="Bold"
                     Margin="5,10,10,10" 
                     BorderThickness="0"
                     BorderBrush="Transparent"
